--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# This variable must be listed in .gitignore in a real world situation
+# This file must be listed in .gitignore in a real world situation
 API_URL='https://70443nq7lb.execute-api.us-west-2.amazonaws.com/dev/'
